<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

    <TextView
        android:id="@+id/tv_movie_title"
        style="@style/Theme.MovieCatalogue.BigBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/movie_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/rating"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

    <TextView
        android:id="@+id/tv_movie_rating"
        style="@style/Theme.MovieCatalogue.BigBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/movie_rating"
        app:layout_constraintBottom_toTopOf="@+id/tv_release_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <TextView
        android:id="@+id/tv_release_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/release_year"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_release_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating" />

    <TextView
        android:id="@+id/tv_movie_release_year"
        style="@style/Theme.MovieCatalogue.BigBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/movie_release_year"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_year" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/Theme.MovieCatalogue.BigBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />

    <TextView
        android:id="@+id/tv_movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

</androidx.constraintlayout.widget.ConstraintLayout><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent">-->

    <!--    -->


    <!--</ScrollView>-->
